--- a/graphql-blog/src/components/ManagePosts/ManagePosts.module.scss
+++ b/graphql-blog/src/components/ManagePosts/ManagePosts.module.scss
@@ -33,6 +33,10 @@
                 font-size: 20px;
             }
 
+            blockquote {
+                text-decoration: underline;
+                font-style: italic;
+            }
 
         }
 
