--- a/graphql-blog/src/components/TodaysPosts/TodaysPosts.module.scss
+++ b/graphql-blog/src/components/TodaysPosts/TodaysPosts.module.scss
@@ -28,6 +28,11 @@
                 font-size: 20px;
             }
 
+            blockquote {
+                text-decoration: underline;
+                font-style: italic;
+            }
+
 
         }
 
